# block-ciphers

./: Cargo.toml
aes/: Cargo.toml
aes/benches/: mod.rs
aes/src/: autodetect.rs  hazmat.rs  lib.rs  ni.rs  soft.rs
aes/src/ni/: aes128.rs  aes192.rs  aes256.rs  ctr.rs  test_expand.rs  utils.rs
aes/src/soft/: fixslice32.rs  fixslice64.rs
kuznyechik/: Cargo.toml
kuznyechik/src/: lib.rs
kuznyechik/src/soft/: mod.rs
kuznyechik/src/sse2/: mod.rs
kuznyechik/tests/: lib.rs
magma/: Cargo.toml
magma/src/: lib.rs
modes/cbc/: Cargo.toml
modes/cbc/src/: lib.rs
modes/cfb-mode/: Cargo.toml
modes/cfb-mode/src/: lib.rs
modes/cfb8/: Cargo.toml
modes/cfb8/src/: lib.rs
modes/ctr/: Cargo.toml
modes/ctr/benches/: aes128.rs
modes/ctr/src/: flavors.rs  lib.rs
modes/ctr/src/flavors/: ctr128.rs  ctr32.rs  ctr64.rs
modes/ctr/tests/ctr32/: big_endian.rs  little_endian.rs
modes/ctr/tests/gost/: mod.rs
modes/ige/: Cargo.toml
modes/ige/src/: lib.rs
modes/ofb/: Cargo.toml
modes/ofb/src/: lib.rs
modes/pcbc/: Cargo.toml
modes/pcbc/src/: lib.rs
twofish/src/: lib.rs
