[package]
name = "cfb8"
version = "0.7.0"
description = "Cipher Feedback with eight bit feedback (CFB-8) block cipher mode of operation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/cfb8"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "block-cipher", "ciphers"]

[dependencies]
cipher = "0.4"

[dev-dependencies]
aes = { version = "0.8", path = "../../aes", features = ["force-soft"] }
