[package]
name = "ofb"
version = "0.5.0"
description = "Output Feedback][OFB] (OFB) block cipher mode of operation"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/ofb"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "block-cipher", "ciphers"]

[dependencies]
cipher = "0.4"

[dev-dependencies]
aes = { version = "0.8", path = "../../aes", features = ["force-soft"] }
